program5/program5_tab.output
State 25 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce


Grammar

    0 $accept: final $end

    1 final: program

    2 program: classDeclaration program
    3        | classDeclaration

    4 classDeclaration: CLASS ID classBody
    5                 | CLASS error classBody
    6                 | error ID classBody
    7                 | CLASS ID error

    8 classBody: LBRACE RBRACE
    9          | LBRACE classBodyMoreVar RBRACE
   10          | LBRACE classBodyMoreConst RBRACE
   11          | LBRACE classBodyMoreMethod RBRACE
   12          | LBRACE classBodyMoreVar classBodyMoreConst RBRACE
   13          | LBRACE classBodyMoreConst classBodyMoreMethod RBRACE
   14          | LBRACE classBodyMoreVar classBodyMoreMethod RBRACE
   15          | LBRACE classBodyMoreVar classBodyMoreConst classBodyMoreMethod RBRACE
   16          | LBRACE error RBRACE

   17 classBodyMoreVar: varDeclaration
   18                 | classBodyMoreVar varDeclaration

   19 classBodyMoreConst: constructorDeclaration
   20                   | classBodyMoreConst constructorDeclaration

   21 classBodyMoreMethod: methodDeclaration
   22                    | classBodyMoreMethod methodDeclaration

   23 varDeclaration: type ID SEMI

   24 type: INT
   25     | ID
   26     | INT LBRACK RBRACK
   27     | ID LBRACK RBRACK

   28 constructorDeclaration: ID LPAREN parameterList RPAREN block

   29 methodDeclaration: resultType ID LPAREN parameterList RPAREN block

   30 resultType: type
   31           | VOID

   32 parameterList: %empty
   33              | parameter
   34              | parameterList COMMA parameter

   35 parameter: type ID

   36 block: LBRACE RBRACE
   37      | LBRACE localVarDeclaration RBRACE
   38      | LBRACE statementMore RBRACE
   39      | LBRACE localVarDeclaration statementMore RBRACE

   40 localVarDeclaration: type ID SEMI
   41                    | localVarDeclaration type ID SEMI

   42 statementMore: statement
   43              | statementMore statement

   44 statement: SEMI
   45          | name ASSIGN expression SEMI
   46          | name LPAREN arglist RPAREN SEMI
   47          | PRINT LPAREN arglist RPAREN SEMI
   48          | conditionalStatement
   49          | WHILE LPAREN expression RPAREN statement
   50          | RETURN optionalExpression SEMI
   51          | block

   52 name: THIS
   53     | ID
   54     | name DOT ID
   55     | name bracketexp
   56     | ID bracketexp

   57 arglist: %empty
   58        | expression
   59        | arglist COMMA expression

   60 conditionalStatement: IF LPAREN expression RPAREN statement
   61                     | IF LPAREN expression RPAREN statement ELSE statement

   62 optionalExpression: %empty
   63                   | expression

   64 expression: name
   65           | NUMBER
   66           | NULLT
   67           | name LPAREN arglist RPAREN
   68           | READ LPAREN RPAREN
   69           | newExpression
   70           | unaryOp
   71           | relationOp
   72           | sumOp
   73           | productOp
   74           | LPAREN expression RPAREN

   75 newExpression: NEW ID LPAREN arglist RPAREN
   76              | NEW INT
   77              | NEW INT bracketexp
   78              | NEW INT bracketexp multibrackets
   79              | NEW INT multibrackets
   80              | NEW ID
   81              | NEW ID bracketexp
   82              | NEW ID bracketexp multibrackets
   83              | NEW ID multibrackets

   84 unaryOp: MINUS expression
   85        | PLUS expression
   86        | NOT expression

   87 relationOp: expression EQ expression
   88           | expression NE expression
   89           | expression GE expression
   90           | expression LE expression
   91           | expression GT expression
   92           | expression LT expression

   93 sumOp: expression PLUS expression
   94      | expression MINUS expression
   95      | expression OR expression

   96 productOp: expression TIMES expression
   97          | expression DIV expression
   98          | expression MOD expression
   99          | expression AND expression

  100 bracketexp: LBRACK expression RBRACK
  101           | bracketexp LBRACK expression RBRACK

  102 multibrackets: LBRACK RBRACK
  103              | multibrackets LBRACK RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256) 5 6 7 16
MINUS (258) 84 94
OR (259) 95
TIMES (260) 96
DIV (261) 97
MOD (262) 98
AND (263) 99
EQ (264) 87
NE (265) 88
GE (266) 89
LE (267) 90
GT (268) 91
LT (269) 92
LPAREN (270) 28 29 46 47 49 60 61 67 68 74 75
RPAREN (271) 28 29 46 47 49 60 61 67 68 74 75
NOT (272) 86
DOT (273) 54
THIS (274) 52
LBRACK (275) 26 27 100 101 102 103
RBRACK (276) 26 27 100 101 102 103
INT (277) 24 26 76 77 78 79
NEW (278) 75 76 77 78 79 80 81 82 83
NULLT (279) 66
READ (280) 68
SEMI (281) 23 40 41 44 45 46 47 50
COMMA (282) 34 59
IF (283) 60 61
ELSE (284) 61
ASSIGN (285) 45
PRINT (286) 47
WHILE (287) 49
RETURN (288) 50
LBRACE (289) 8 9 10 11 12 13 14 15 16 36 37 38 39
RBRACE (290) 8 9 10 11 12 13 14 15 16 36 37 38 39
VOID (291) 31
CLASS (292) 4 5 7
ID (293) 4 6 7 23 25 27 28 29 35 40 41 53 54 56 75 80 81 82 83
NUMBER (294) 65
PLUS (295) 85 93
THEN (296)
UPLUS (297)
UMINUS (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
final (45)
    on left: 1, on right: 0
program (46)
    on left: 2 3, on right: 1 2
classDeclaration (47)
    on left: 4 5 6 7, on right: 2 3
classBody (48)
    on left: 8 9 10 11 12 13 14 15 16, on right: 4 5 6
classBodyMoreVar (49)
    on left: 17 18, on right: 9 12 14 15 18
classBodyMoreConst (50)
    on left: 19 20, on right: 10 12 13 15 20
classBodyMoreMethod (51)
    on left: 21 22, on right: 11 13 14 15 22
varDeclaration (52)
    on left: 23, on right: 17 18
type (53)
    on left: 24 25 26 27, on right: 23 30 35 40 41
constructorDeclaration (54)
    on left: 28, on right: 19 20
methodDeclaration (55)
    on left: 29, on right: 21 22
resultType (56)
    on left: 30 31, on right: 29
parameterList (57)
    on left: 32 33 34, on right: 28 29 34
parameter (58)
    on left: 35, on right: 33 34
block (59)
    on left: 36 37 38 39, on right: 28 29 51
localVarDeclaration (60)
    on left: 40 41, on right: 37 39 41
statementMore (61)
    on left: 42 43, on right: 38 39 43
statement (62)
    on left: 44 45 46 47 48 49 50 51, on right: 42 43 49 60 61
name (63)
    on left: 52 53 54 55 56, on right: 45 46 54 55 64 67
arglist (64)
    on left: 57 58 59, on right: 46 47 59 67 75
conditionalStatement (65)
    on left: 60 61, on right: 48
optionalExpression (66)
    on left: 62 63, on right: 50
expression (67)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 45 49 58 59
    60 61 63 74 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101
newExpression (68)
    on left: 75 76 77 78 79 80 81 82 83, on right: 69
unaryOp (69)
    on left: 84 85 86, on right: 70
relationOp (70)
    on left: 87 88 89 90 91 92, on right: 71
sumOp (71)
    on left: 93 94 95, on right: 72
productOp (72)
    on left: 96 97 98 99, on right: 73
bracketexp (73)
    on left: 100 101, on right: 55 56 77 78 81 82 101
multibrackets (74)
    on left: 102 103, on right: 78 79 82 83 103


State 0

    0 $accept: . final $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    final             go to state 3
    program           go to state 4
    classDeclaration  go to state 5


State 1

    6 classDeclaration: error . ID classBody

    ID  shift, and go to state 6


State 2

    4 classDeclaration: CLASS . ID classBody
    5                 | CLASS . error classBody
    7                 | CLASS . ID error

    error  shift, and go to state 7
    ID     shift, and go to state 8


State 3

    0 $accept: final . $end

    $end  shift, and go to state 9


State 4

    1 final: program .

    $default  reduce using rule 1 (final)


State 5

    2 program: classDeclaration . program
    3        | classDeclaration .

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 3 (program)

    program           go to state 10
    classDeclaration  go to state 5


State 6

    6 classDeclaration: error ID . classBody

    LBRACE  shift, and go to state 11

    classBody  go to state 12


State 7

    5 classDeclaration: CLASS error . classBody

    LBRACE  shift, and go to state 11

    classBody  go to state 13


State 8

    4 classDeclaration: CLASS ID . classBody
    7                 | CLASS ID . error

    error   shift, and go to state 14
    LBRACE  shift, and go to state 11

    classBody  go to state 15


State 9

    0 $accept: final $end .

    $default  accept


State 10

    2 program: classDeclaration program .

    $default  reduce using rule 2 (program)


State 11

    8 classBody: LBRACE . RBRACE
    9          | LBRACE . classBodyMoreVar RBRACE
   10          | LBRACE . classBodyMoreConst RBRACE
   11          | LBRACE . classBodyMoreMethod RBRACE
   12          | LBRACE . classBodyMoreVar classBodyMoreConst RBRACE
   13          | LBRACE . classBodyMoreConst classBodyMoreMethod RBRACE
   14          | LBRACE . classBodyMoreVar classBodyMoreMethod RBRACE
   15          | LBRACE . classBodyMoreVar classBodyMoreConst classBodyMoreMethod RBRACE
   16          | LBRACE . error RBRACE

    error   shift, and go to state 16
    INT     shift, and go to state 17
    RBRACE  shift, and go to state 18
    VOID    shift, and go to state 19
    ID      shift, and go to state 20

    classBodyMoreVar        go to state 21
    classBodyMoreConst      go to state 22
    classBodyMoreMethod     go to state 23
    varDeclaration          go to state 24
    type                    go to state 25
    constructorDeclaration  go to state 26
    methodDeclaration       go to state 27
    resultType              go to state 28


State 12

    6 classDeclaration: error ID classBody .

    $default  reduce using rule 6 (classDeclaration)


State 13

    5 classDeclaration: CLASS error classBody .

    $default  reduce using rule 5 (classDeclaration)


State 14

    7 classDeclaration: CLASS ID error .

    $default  reduce using rule 7 (classDeclaration)


State 15

    4 classDeclaration: CLASS ID classBody .

    $default  reduce using rule 4 (classDeclaration)


State 16

   16 classBody: LBRACE error . RBRACE

    RBRACE  shift, and go to state 29


State 17

   24 type: INT .
   26     | INT . LBRACK RBRACK

    LBRACK  shift, and go to state 30

    $default  reduce using rule 24 (type)


State 18

    8 classBody: LBRACE RBRACE .

    $default  reduce using rule 8 (classBody)


State 19

   31 resultType: VOID .

    $default  reduce using rule 31 (resultType)


State 20

   25 type: ID .
   27     | ID . LBRACK RBRACK
   28 constructorDeclaration: ID . LPAREN parameterList RPAREN block

    LPAREN  shift, and go to state 31
    LBRACK  shift, and go to state 32

    $default  reduce using rule 25 (type)


State 21

    9 classBody: LBRACE classBodyMoreVar . RBRACE
   12          | LBRACE classBodyMoreVar . classBodyMoreConst RBRACE
   14          | LBRACE classBodyMoreVar . classBodyMoreMethod RBRACE
   15          | LBRACE classBodyMoreVar . classBodyMoreConst classBodyMoreMethod RBRACE
   18 classBodyMoreVar: classBodyMoreVar . varDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 33
    VOID    shift, and go to state 19
    ID      shift, and go to state 20

    classBodyMoreConst      go to state 34
    classBodyMoreMethod     go to state 35
    varDeclaration          go to state 36
    type                    go to state 25
    constructorDeclaration  go to state 26
    methodDeclaration       go to state 27
    resultType              go to state 28


State 22

   10 classBody: LBRACE classBodyMoreConst . RBRACE
   13          | LBRACE classBodyMoreConst . classBodyMoreMethod RBRACE
   20 classBodyMoreConst: classBodyMoreConst . constructorDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 37
    VOID    shift, and go to state 19
    ID      shift, and go to state 20

    classBodyMoreMethod     go to state 38
    type                    go to state 39
    constructorDeclaration  go to state 40
    methodDeclaration       go to state 27
    resultType              go to state 28


State 23

   11 classBody: LBRACE classBodyMoreMethod . RBRACE
   22 classBodyMoreMethod: classBodyMoreMethod . methodDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 41
    VOID    shift, and go to state 19
    ID      shift, and go to state 42

    type               go to state 39
    methodDeclaration  go to state 43
    resultType         go to state 28


State 24

   17 classBodyMoreVar: varDeclaration .

    $default  reduce using rule 17 (classBodyMoreVar)


State 25

   23 varDeclaration: type . ID SEMI
   30 resultType: type .

    ID  shift, and go to state 44

    ID  [reduce using rule 30 (resultType)]


State 26

   19 classBodyMoreConst: constructorDeclaration .

    $default  reduce using rule 19 (classBodyMoreConst)


State 27

   21 classBodyMoreMethod: methodDeclaration .

    $default  reduce using rule 21 (classBodyMoreMethod)


State 28

   29 methodDeclaration: resultType . ID LPAREN parameterList RPAREN block

    ID  shift, and go to state 45


State 29

   16 classBody: LBRACE error RBRACE .

    $default  reduce using rule 16 (classBody)


State 30

   26 type: INT LBRACK . RBRACK

    RBRACK  shift, and go to state 46


State 31

   28 constructorDeclaration: ID LPAREN . parameterList RPAREN block

    INT  shift, and go to state 17
    ID   shift, and go to state 42

    $default  reduce using rule 32 (parameterList)

    type           go to state 47
    parameterList  go to state 48
    parameter      go to state 49


State 32

   27 type: ID LBRACK . RBRACK

    RBRACK  shift, and go to state 50


State 33

    9 classBody: LBRACE classBodyMoreVar RBRACE .

    $default  reduce using rule 9 (classBody)


State 34

   12 classBody: LBRACE classBodyMoreVar classBodyMoreConst . RBRACE
   15          | LBRACE classBodyMoreVar classBodyMoreConst . classBodyMoreMethod RBRACE
   20 classBodyMoreConst: classBodyMoreConst . constructorDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 51
    VOID    shift, and go to state 19
    ID      shift, and go to state 20

    classBodyMoreMethod     go to state 52
    type                    go to state 39
    constructorDeclaration  go to state 40
    methodDeclaration       go to state 27
    resultType              go to state 28


State 35

   14 classBody: LBRACE classBodyMoreVar classBodyMoreMethod . RBRACE
   22 classBodyMoreMethod: classBodyMoreMethod . methodDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 53
    VOID    shift, and go to state 19
    ID      shift, and go to state 42

    type               go to state 39
    methodDeclaration  go to state 43
    resultType         go to state 28


State 36

   18 classBodyMoreVar: classBodyMoreVar varDeclaration .

    $default  reduce using rule 18 (classBodyMoreVar)


State 37

   10 classBody: LBRACE classBodyMoreConst RBRACE .

    $default  reduce using rule 10 (classBody)


State 38

   13 classBody: LBRACE classBodyMoreConst classBodyMoreMethod . RBRACE
   22 classBodyMoreMethod: classBodyMoreMethod . methodDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 54
    VOID    shift, and go to state 19
    ID      shift, and go to state 42

    type               go to state 39
    methodDeclaration  go to state 43
    resultType         go to state 28


State 39

   30 resultType: type .

    $default  reduce using rule 30 (resultType)


State 40

   20 classBodyMoreConst: classBodyMoreConst constructorDeclaration .

    $default  reduce using rule 20 (classBodyMoreConst)


State 41

   11 classBody: LBRACE classBodyMoreMethod RBRACE .

    $default  reduce using rule 11 (classBody)


State 42

   25 type: ID .
   27     | ID . LBRACK RBRACK

    LBRACK  shift, and go to state 32

    $default  reduce using rule 25 (type)


State 43

   22 classBodyMoreMethod: classBodyMoreMethod methodDeclaration .

    $default  reduce using rule 22 (classBodyMoreMethod)


State 44

   23 varDeclaration: type ID . SEMI

    SEMI  shift, and go to state 55


State 45

   29 methodDeclaration: resultType ID . LPAREN parameterList RPAREN block

    LPAREN  shift, and go to state 56


State 46

   26 type: INT LBRACK RBRACK .

    $default  reduce using rule 26 (type)


State 47

   35 parameter: type . ID

    ID  shift, and go to state 57


State 48

   28 constructorDeclaration: ID LPAREN parameterList . RPAREN block
   34 parameterList: parameterList . COMMA parameter

    RPAREN  shift, and go to state 58
    COMMA   shift, and go to state 59


State 49

   33 parameterList: parameter .

    $default  reduce using rule 33 (parameterList)


State 50

   27 type: ID LBRACK RBRACK .

    $default  reduce using rule 27 (type)


State 51

   12 classBody: LBRACE classBodyMoreVar classBodyMoreConst RBRACE .

    $default  reduce using rule 12 (classBody)


State 52

   15 classBody: LBRACE classBodyMoreVar classBodyMoreConst classBodyMoreMethod . RBRACE
   22 classBodyMoreMethod: classBodyMoreMethod . methodDeclaration

    INT     shift, and go to state 17
    RBRACE  shift, and go to state 60
    VOID    shift, and go to state 19
    ID      shift, and go to state 42

    type               go to state 39
    methodDeclaration  go to state 43
    resultType         go to state 28


State 53

   14 classBody: LBRACE classBodyMoreVar classBodyMoreMethod RBRACE .

    $default  reduce using rule 14 (classBody)


State 54

   13 classBody: LBRACE classBodyMoreConst classBodyMoreMethod RBRACE .

    $default  reduce using rule 13 (classBody)


State 55

   23 varDeclaration: type ID SEMI .

    $default  reduce using rule 23 (varDeclaration)


State 56

   29 methodDeclaration: resultType ID LPAREN . parameterList RPAREN block

    INT  shift, and go to state 17
    ID   shift, and go to state 42

    $default  reduce using rule 32 (parameterList)

    type           go to state 47
    parameterList  go to state 61
    parameter      go to state 49


State 57

   35 parameter: type ID .

    $default  reduce using rule 35 (parameter)


State 58

   28 constructorDeclaration: ID LPAREN parameterList RPAREN . block

    LBRACE  shift, and go to state 62

    block  go to state 63


State 59

   34 parameterList: parameterList COMMA . parameter

    INT  shift, and go to state 17
    ID   shift, and go to state 42

    type       go to state 47
    parameter  go to state 64


State 60

   15 classBody: LBRACE classBodyMoreVar classBodyMoreConst classBodyMoreMethod RBRACE .

    $default  reduce using rule 15 (classBody)


State 61

   29 methodDeclaration: resultType ID LPAREN parameterList . RPAREN block
   34 parameterList: parameterList . COMMA parameter

    RPAREN  shift, and go to state 65
    COMMA   shift, and go to state 59


State 62

   36 block: LBRACE . RBRACE
   37      | LBRACE . localVarDeclaration RBRACE
   38      | LBRACE . statementMore RBRACE
   39      | LBRACE . localVarDeclaration statementMore RBRACE

    THIS    shift, and go to state 66
    INT     shift, and go to state 17
    SEMI    shift, and go to state 67
    IF      shift, and go to state 68
    PRINT   shift, and go to state 69
    WHILE   shift, and go to state 70
    RETURN  shift, and go to state 71
    LBRACE  shift, and go to state 62
    RBRACE  shift, and go to state 72
    ID      shift, and go to state 73
